<resources>
    <string name="app_name">الشحن الصاروخي</string>
    <string name="num_card">رقم البطاقة :</string>
    <string name="num_id">رقم الهوية :</string>
    <string name="network">الشبكة :</string>
    <string name="recharge">اشحن</string>
    <string name="home">الرئيسية</string>
    <string name="balance">الاستعلام عن الرصيد</string>
    <string name="talk_me">كلمني</string>
    <string name="conver">تحويل</string>
    <string name="numconfer">رقم المحول له :</string>
    <string name="services">خدمات :</string>
    <string name="numphone">رقم الجوال :</string>
    <string name="amount">المبلغ :</string>
    <string name="charge">الشحن</string>
    <string name="noneNetwork">لم تحدد نوع الشريحة</string>
    <string name="noneIDumber">لا يوجد رقم هوية</string>
    <string name="CardNumShort">رقم البطاقة قصير جداً</string>
    <string name="noneCardNum">لا يوجد رقم بطاقة</string>
    <string name="IDNumIncorrect">رقم الهوية غير صحيح</string>
    <string name="BuTerms">شروط الخدمة</string>
    <string name="BuImport">استيراد..</string>
    <string name="action_settings"></string>
    <string name="preference_file_key">com.mmhh2.chargeingrocket.mainfragment.SAVEDATA</string>
    <string name="settings">الاعدادات</string>
    <string-array name="num_amount">
        <item>اختر مبلغ التحويل</item>
        <item>5 ريال</item>
        <item>10 ريال</item>
        <item>15 ريال</item>
        <item>20 ريال</item>
    </string-array>
</resources>
