<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LiLConver"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/BuConver">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/conver"
            android:id="@+id/TVConver"
            android:layout_above="@+id/LiLConver"
            android:layout_alignParentStart="true"
            android:layout_marginStart="19dp"
            android:textSize="17sp"
            android:textColor="#60646D"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LiLNumPhon">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/TxNumPhon"
                android:text="@string/numconfer" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/EdtNumPhon" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:text="@string/BuImport"
                android:id="@+id/BuImport"
                android:background="@drawable/buttonbalance"
                android:textColor="@color/abc_primary_text_disable_only_material_dark"
                android:layout_weight="0.2"
                android:textSize="11dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LiLBalance"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/amount"
                android:id="@+id/TVBal" />

            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/EdTBalance"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LiLConver"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp" >

        <Button
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/conver"
            android:id="@+id/BuConver"
            android:background="@drawable/stylenew"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:textSize="19sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/BuTerms"
            android:id="@+id/button2"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/abc_primary_text_disable_only_material_dark" />
    </LinearLayout>


</RelativeLayout>