<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mmhh2.chargingrocket.MainFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentEnd="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LiLMobile"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/ImVMobile"
                    android:background="@drawable/mobile"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="Mobile" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LiL"
                android:layout_below="@+id/LiLMobile"
                android:layout_alignParentEnd="true"
                android:gravity="center">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/LiLNumCard">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/num_card"
                        android:id="@+id/TVNumCard" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/EdTNumCard"
                        android:layout_weight="1" />
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recharge"
                    android:id="@+id/BuRecharge"
                    android:layout_marginTop="23dp"
                    android:layout_below="@+id/LiLNetworks"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/buttonstyle"
                    android:textColor="@color/abc_tint_switch_thumb"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LiLServices"
                android:layout_below="@+id/LiL"
                android:layout_alignEnd="@+id/LiL"
                android:layout_marginTop="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/services"
                    android:id="@+id/TVServices" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RadGroServices"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/RadBuCharge"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.3"
                        android:text="@string/charge" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/RadBuTalkme"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.3"
                        android:text="@string/talk_me" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/RadBuConver"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.3"
                        android:text="@string/conver" />

                </RadioGroup>

                <Button
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:id="@+id/button"
                    android:layout_marginTop="23dp"
                    android:layout_below="@+id/LiLNetworks"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/buttonstyle"
                    android:textSize="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/abc_primary_text_disable_only_material_dark" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>