<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LiL"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/charge"
            android:id="@+id/TVRecharge"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginRight="19dp"
            android:layout_gravity="right" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LiLNumCard">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/num_card"
                android:id="@+id/TVNumCard" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/EdTNumCard"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lmBuCam"
                android:src="@android:drawable/ic_menu_camera"
                android:background="@drawable/camcolors" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@drawable/stylenew"
            android:textColor="@color/abc_tint_switch_thumb"
            android:textSize="20sp"
            android:text="@string/recharge" />

    </LinearLayout>



</RelativeLayout>