<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mmhh2.chargingrocket.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:gravity="top|center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LiLSettings"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ImVSettings"
                    android:background="@drawable/settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/settings"
                    android:id="@+id/TVSettings"
                    android:textColor="@color/material_blue_grey_800"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LiLNumID"
                android:layout_marginTop="39dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/num_id"
                    android:id="@+id/TVNumID" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/EdTNumID"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LiLNetworks"
                android:layout_marginTop="22dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/network"
                    android:id="@+id/TVNetwork" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RadGroNetworks"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/RadBuSTC"
                        android:layout_marginLeft="10dp"
                        android:drawableLeft="@drawable/stc"
                        android:layout_weight="0.3" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/RadBuMobily"
                        android:layout_marginLeft="10dp"
                        android:drawableLeft="@drawable/mobily"
                        android:layout_weight="0.3" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/RadBuZain"
                        android:layout_marginLeft="10dp"
                        android:drawableLeft="@drawable/zainsa"
                        android:layout_weight="0.3" />

                </RadioGroup>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>